fix animation/nav overlap

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 0;
+  z-index: 1;
   width: 100%;
 }
 
